opam-version: "1.2"
maintainer:   "Gabriel Radanne <drupyog@zoho.com>"
authors:      [ "Thomas Gazagnaire"
                "Anil Madhavapeddy"
                "Dave Scott"
                "Thomas Leonard"
                "Gabriel Radanne" ]
homepage:     "https://github.com/mirage/functoria"
bug-reports:  "https://github.com/mirage/functoria/issues"
dev-repo:     "https://github.com/mirage/functoria.git"
doc:          "https://mirage.github.io/functoria/"
license:      "ISC"

build: ["ocaml" "pkg/pkg.ml" "build" "--pkg-name" name "--pinned" "%{pinned}%" ]
depends: [
  "ocamlfind" {build}
  "ocamlbuild" {build}
  "topkg"     {build & >= "0.7.3"}
  "cmdliner" {>= "0.9.8"}
  "fmt"
]
available: [ocaml-version >= "4.02"]
