opam-version: "2.0"
maintainer:   ["anil@recoil.org" "thomas@gazagnaire.org"]
authors:      ["Thomas Gazagnaire" "Anil Madhavapeddy" "Gabriel Radanne"
               "Mindy Preston" "Thomas Leonard" "Nicolas Ojeda Bar"
               "Dave Scott" "David Kaloper" "Hannes Mehnert" "Richard Mortier"]
homepage:     "https://github.com/mirage/mirage"
bug-reports:  "https://github.com/mirage/mirage/issues/"
dev-repo:     "git+https://github.com/mirage/mirage.git"
license:      "ISC"
tags:         ["org:mirage" "org:xapi-project"]
doc:          "https://mirage.github.io/mirage/"

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

depends: [
  "ocaml" {>= "4.06.0"}
  "dune" {>= "2.0.0"}
  "ipaddr"             {>= "3.0.0"}
  "functoria-runtime"  {>= "3.0.2"}
  "fmt"
  "logs"
  "lwt" {>= "4.0.0"}
  "alcotest" {with-test}
]
synopsis: "The base MirageOS runtime library, part of every MirageOS unikernel"
description: """
A bundle of useful runtime functions for applications built with MirageOS
"""
