opam-version: "2.0"
maintainer:   ["anil@recoil.org" "thomas@gazagnaire.org"]
authors:      "The MirageOS team"
homepage:     "https://github.com/mirage/mirage"
bug-reports:  "https://github.com/mirage/mirage/issues/"
dev-repo:     "git+https://github.com/mirage/mirage.git"
license:      "ISC"
tags:         ["org:mirage" "org:xapi-project"]


build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

depends:   [
  "ocaml" {>= "4.06.0"}
  "dune" {>= "2.0.0"}
  "mirage-types" {= version}
]

synopsis: "Lwt module type definitions for MirageOS applications"
description: """
The purpose of this library is to provide concrete types
for several that are left abstract in `mirage-types`:

- `type 'a io = 'a Lwt.t`
- `type page_aligned_buffer = Io_page.t`
- `type buffer = Cstruct.t`
- `type macaddr = Macaddr.t`
- `type ipv4addr = Ipaddr.V4.t`
"""
post-messages: [
 "This package will be retired in MirageOS 4.0. Please use individual signatures (mirage-net / mirage-clock / etc.) instead."
]
