opam-version: "1.2"
maintainer:   ["anil@recoil.org" "thomas@gazagnaire.org"]
authors:      ["Thomas Gazagnaire" "Anil Madhavapeddy" "Gabriel Radanne"
               "Mindy Preston" "Thomas Leonard" "Nicolas Ojeda Bar"
               "Dave Scott" "David Kaloper" "Hannes Mehnert" "Richard Mortier"]
homepage:     "https://mirage.io/"
bug-reports:  "https://github.com/mirage/mirage/issues/"
dev-repo:     "https://github.com/mirage/mirage.git"
tags:         ["org:mirage" "org:xapi-project"]
build: ["ocaml" "pkg/pkg.ml" "build" "--pkg-name" name "--pinned" "%{pinned}%"]
depends:   [
  "ocamlbuild" {build}
  "ocamlfind"  {build}
  "topkg"      {build & >= "0.8.0"}
  "result"
  "mirage-device"
  "mirage-time"
  "mirage-clock" {>= "1.2.0"}
  "mirage-random"
  "mirage-flow"
  "mirage-console"
  "mirage-block" {>= "1.0.0"}
  "mirage-net" {>= "1.0.0"}
  "mirage-fs" {>= "1.0.0"}
  "mirage-kv"
]
