opam-version: "2.0"
maintainer:   ["anil@recoil.org" "thomas@gazagnaire.org"]
authors:      ["Thomas Gazagnaire" "Anil Madhavapeddy" "Gabriel Radanne"
               "Mindy Preston" "Thomas Leonard" "Nicolas Ojeda Bar"
               "Dave Scott" "David Kaloper" "Hannes Mehnert" "Richard Mortier"]
homepage:     "https://github.com/mirage/mirage"
bug-reports:  "https://github.com/mirage/mirage/issues/"
dev-repo:     "git+https://github.com/mirage/mirage.git"
license:      "ISC"
tags:         ["org:mirage" "org:xapi-project"]


build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

depends: [
  "ocaml" {>= "4.05.0"}
  "dune" {build & >= "1.1.0"}
  "mirage-device" {>= "1.1.0"}
  "mirage-time" {>= "1.1.0"}
  "mirage-clock" {>= "2.0.0"}
  "mirage-random" {>= "1.2.0"}
  "mirage-flow" {>= "1.5.0"}
  "mirage-console" {>= "2.3.5"}
  "mirage-protocols" {>= "2.0.0"}
  "mirage-stack" {>= "1.3.0"}
  "mirage-block" {>= "1.1.0"}
  "mirage-net" {>= "2.0.0"}
  "mirage-fs" {>= "2.0.0"}
  "mirage-kv" {>= "2.0.0"}
  "mirage-channel" {>= "3.1.0"}
]
synopsis: "Module type definitions for MirageOS applications"
description: """
Module type definitions for MirageOS applications
"""
