opam-version: "2.0"
maintainer:   ["anil@recoil.org" "thomas@gazagnaire.org"]
authors:      ["Thomas Gazagnaire" "Anil Madhavapeddy" "Gabriel Radanne"
               "Mindy Preston" "Thomas Leonard" "Nicolas Ojeda Bar"
               "Dave Scott" "David Kaloper" "Hannes Mehnert" "Richard Mortier"]
homepage:     "https://github.com/mirage/mirage"
bug-reports:  "https://github.com/mirage/mirage/issues/"
dev-repo:     "git+https://github.com/mirage/mirage.git"
license:      "ISC"
tags:         ["org:mirage" "org:xapi-project"]


build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

depends: [
  "ocaml" {>= "4.06.0"}
  "dune" {>= "2.0.0"}
  "mirage-device" {>= "2.0.0"}
  "mirage-time" {>= "2.0.0"}
  "mirage-clock" {>= "3.0.0"}
  "mirage-random" {>= "2.0.0"}
  "mirage-flow" {>= "2.0.0"}
  "mirage-console" {>= "3.0.0"}
  "mirage-protocols" {>= "4.0.0"}
  "mirage-stack" {>= "2.0.0"}
  "mirage-block" {>= "2.0.0"}
  "mirage-net" {>= "3.0.0"}
  "mirage-fs" {>= "3.0.0"}
  "mirage-kv" {>= "3.0.0"}
  "mirage-channel" {>= "4.0.0"}
]
synopsis: "Module type definitions for MirageOS applications"
description: """
Module type definitions for MirageOS applications
"""
post-messages: [
  "This package will be retired in MirageOS 4.0. Please use individual signatures (mirage-net / mirage-clock / etc.) instead."
]
