opam-version: "2.0"
maintainer:   ["anil@recoil.org" "thomas@gazagnaire.org"]
authors:      ["Thomas Gazagnaire" "Anil Madhavapeddy" "Gabriel Radanne"
               "Mindy Preston" "Thomas Leonard" "Nicolas Ojeda Bar"
               "Dave Scott" "David Kaloper" "Hannes Mehnert" "Richard Mortier"]
homepage:     "https://github.com/mirage/mirage"
bug-reports:  "https://github.com/mirage/mirage/issues/"
dev-repo:     "git+https://github.com/mirage/mirage.git"
license:      "ISC"
tags:         ["org:mirage" "org:xapi-project"]
doc:          "https://mirage.github.io/mirage/"
available: opam-version >= "2.1.0"

build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test & os != "macos"}
]

depends: [
  "ocaml" {>= "4.08.0"}
  "dune" {>= "2.9.0" & < "3.8.0"}
  "dune" {with-test & >= "3.0.0"}
  "ipaddr" {>= "5.0.0"}
  "functoria" {= version}
  "bos"
  "astring"
  "logs"
  "mirage-runtime" {= version}
  "opam-monorepo" {>= "0.3.2"}
  "alcotest" {with-test}
  "fmt" {>= "0.8.7" & with-test}
]
synopsis: "The MirageOS library operating system"
description: """
MirageOS is a library operating system that constructs unikernels for
secure, high-performance network applications across a variety of
cloud computing and mobile platforms. Code can be developed on a
normal OS such as Linux or MacOS X, and then compiled into a
fully-standalone, specialised unikernel that runs under the Xen
hypervisor.

Since Xen powers most public cloud computing infrastructure such as
Amazon EC2 or Rackspace, this lets your servers run more cheaply,
securely and with finer control than with a full software stack.
"""
