(library
 (name mirage_runtime)
 (public_name mirage-runtime)
 (modules mirage_runtime)
 (libraries mirage-runtime.functoria lwt logs))

(library
 (name mirage_runtime_network)
 (public_name mirage-runtime.network)
 (modules mirage_runtime_network)
 (libraries mirage-runtime mirage-runtime.functoria ipaddr))
