(test
 (name      test_core)
 (modules   test_core)
 (libraries test_app alcotest cmdliner rresult astring)
 (package   functoria)
 (deps      app/config.ml app/app.ml app/config.dune)
)

(test
 (name      test_full)
 (modules   test_full)
 (libraries test_app alcotest cmdliner rresult astring)
 (package   functoria-runtime)
 (deps      app/config.ml app/app.ml app/config.dune ../runtime/functoria_runtime.ml ../runtime/functoria_info.ml)
)
