(test
 (name      test_core)
 (modules   test_core)
 (libraries test_app alcotest cmdliner rresult astring)
 (package   functoria)
 (deps      app/config.ml app/app.ml app/dune.config)
)

(test
 (name      test_full)
 (modules   test_full)
 (libraries functoria.test alcotest cmdliner rresult astring)
 (package   functoria-runtime)
 (deps      app/config.ml app/app.ml app/dune.config (package functoria-runtime))
)
