(library
 (public_name mirage.key)
 (name mirage_key)
 (wrapped false)
 (libraries ipaddr functoria mirage-runtime bos)
 (modules mirage_key mirage_runtime_key))

(library
 (public_name mirage)
 (wrapped false)
 (libraries mirage.impl mirage.target)
 (modules :standard \ mirage_key mirage_runtime_key))
