(executable
 (name config)
 (libraries f0))

(rule
 (target packages)
 (action
  (with-stdout-to
   %{target}
   (run ./config.exe query packages))))

(rule
 (target opam)
 (action
  (with-stdout-to
   %{target}
   (run ./config.exe query opam))))

(rule
 (alias runtest)
 (package functoria)
 (deps
  (:x opam.expected)
  (:y opam))
 (action
  (diff? %{x} %{y})))

(rule
 (alias runtest)
 (package functoria)
 (deps packages.expected packages)
 (action
  (diff? packages.expected packages)))
