(executable
 (name config)
 (libraries f0))

(rule
 (target packages)
 (action
  (with-stdout-to
   %{target}
   (run ./config.exe query packages))))

(rule
 (target opam)
 (action
  (with-stdout-to
   %{target}
   (run ./config.exe query opam))))

(rule
 (target install)
 (action
  (with-stdout-to
   %{target}
   (run ./config.exe query install))))

(rule
 (alias runtest)
 (package functoria)
 (action
  (diff opam.expected opam)))

(rule
 (alias runtest)
 (package functoria)
 (action
  (diff packages.expected packages)))

(rule
 (alias runtest)
 (package functoria)
 (action
  (diff install.expected install)))
