(executable
 (name test)
 (modules test)
 (libraries e2e alcotest cmdliner rresult astring))

(executable
 (name help)
 (modules help)
 (libraries astring fmt))

(cram
 (deps
  test.exe
  help.exe
  (source_tree app)
  (source_tree lib)
  (package functoria)
  (package functoria-runtime))
 (enabled_if
  (<> %{architecture} "i386"))
 (package functoria))
