(executable
 (name config)
 (libraries f0))

(include dune.inc)

(rule
 (deps
  (source_tree .))
 (action
  (with-stdout-to
   dune.gen
   (run ocaml gen.ml))))

(rule
 (alias runtest)
 (action
  (diff dune.inc dune.gen)))

; check that `<tool> query --help' and `<tool> help query' gives
; similar results

(rule
 (alias runtest)
 (package functoria)
 (action
  (diff query-help help-query)))
