(executable
 (name config)
 (modules config)
 (libraries mirage))

(executable
 (name config_dash_in_name)
 (modules config_dash_in_name)
 (libraries mirage))

(executable
 (name config_noop)
 (modules config_noop)
 (libraries mirage))

(cram
 (package mirage)
 (deps config.exe config_noop.exe config_dash_in_name.exe))
