(executable
 (name test)
 (modules test)
 (libraries functoria.test fmt mirage))

(rule
 (targets main.ml key_gen.ml)
 (action
  (run ./test.exe)))

(rule
 (alias runtest)
 (package mirage)
 (action
  (progn
   (diff main.ml.expected main.ml))))

(rule
 (alias runtest)
 (package mirage)
 (action
  (progn
   (diff key_gen.ml.expected key_gen.ml))))

(executable
 (name key_gen)
 (modules key_gen key)
 (libraries mirage-runtime.network))

(rule
 (alias runtest)
 (deps key_gen.exe)
 (action
  (echo OK)))
